--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
+    "@ng-select/ng-select": "^3.7.2",
     "@sweetalert2/ngx-sweetalert2": "^7.1.0",
     "bootstrap": "^4.3.1",
     "daterangepicker": "^3.0.5",
